Fix: cta button too wide

--- a/css/styles1.css
+++ b/css/styles1.css
@@ -79,7 +79,7 @@ nav a:hover {
     background-color: #fa6400;
     border-style: none;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: 600;
     padding: 14px;
 }
@@ -127,7 +127,6 @@ nav a:hover {
     flex-wrap: wrap;
     height: 100%;
     justify-content: center;
-    /*padding-bottom: 50px;*/
     width: 50%;
 }
 
